sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
    if(i==0){i=1;}
       ^AlgGnomeSort:5: error: not found: value i
    if(i==0){i=1;}
             ^AlgGnomeSort:6: error: not found: value i
    else if(i == getNombreValeurs()){ok=true;}
            ^AlgGnomeSort:7: error: not found: value estPlusPetit
    else if(!estPlusPetit(i,i+1)){i+=1}
             ^AlgGnomeSort:7: error: not found: value i
    else if(!estPlusPetit(i,i+1)){i+=1}
                          ^AlgGnomeSort:7: error: not found: value i
    else if(!estPlusPetit(i,i+1)){i+=1}
                            ^AlgGnomeSort:7: error: not found: value i
    else if(!estPlusPetit(i,i+1)){i+=1}
                                  ^AlgGnomeSort:8: error: not found: value i
    else{echange(i,i+1);i+= -1;}
                 ^AlgGnomeSort:8: error: not found: value i
    else{echange(i,i+1);i+= -1;}
                   ^AlgGnomeSort:8: error: not found: value i
    else{echange(i,i+1);i+= -1;}
                        ^