sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var ok : Boolean = false;
  while(ok == false){
    if(i==0){i=1;}
    else if(i == getNombreValeurs()){ok=true;}
    else if(!estPlusPetit(i,i+1)){i+=1}
    else{echange(i,i+1);i+= -1;}
    
  }
}